--- a/app/src/main/res/layout/activity_contact_details.xml
+++ b/app/src/main/res/layout/activity_contact_details.xml
@@ -28,40 +28,34 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/appbar_header_height"
+        android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar_contact_details"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        <include
+            android:id="@+id/include_toolbar"
+            layout="@layout/toolbar" />
+
+        <ch.protonmail.android.views.ListItemThumbnail
+            android:id="@+id/thumbnail_contact_details"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@color/white"
-            android:fitsSystemWindows="true"
-            app:contentScrim="@color/white"
-            app:expandedTitleGravity="bottom|center_horizontal"
-            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Headline"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
+            android:layout_margin="@dimen/padding_l"
+            app:circleSize="@dimen/avatar_size" />
 
-            <ch.protonmail.android.views.ListItemThumbnail
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                app:circleSize="@dimen/avatar_size" />
+        <TextView
+            android:id="@+id/text_view_contact_details_contact_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/Proton.Text.Headline"
+            android:layout_gravity="center|bottom"
+            android:layout_marginBottom="@dimen/padding_l"
+            android:gravity="center"
+            tools:text="@tools:sample/full_names" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center|bottom"
-                android:layout_marginBottom="@dimen/padding_xl"
-                android:gravity="center"
-                tools:text="@tools:sample/full_names" />
-
-            <include
-                android:id="@+id/include_toolbar"
-                layout="@layout/toolbar" />
-
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
+        <include
+            android:id="@+id/include_contact_details_buttons"
+            layout="@layout/layout_contact_details_main_buttons" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -77,9 +71,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <include
-                android:id="@+id/include_contact_details_buttons"
-                layout="@layout/layout_contact_details_main_buttons" />
+
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view_contacts_details"
