Add Remove password button for SetMessagePasswordActivity.kt
MAILAND-1672, MAILAND-1671, MAILAND-1670

--- a/app/src/main/res/layout/activity_set_message_password.xml
+++ b/app/src/main/res/layout/activity_set_message_password.xml
@@ -121,6 +121,20 @@
                 android:text="@string/set_msg_password_apply_password"
                 android:enabled="false"/>
 
+            <!-- Remove -->
+            <me.proton.core.presentation.ui.view.ProtonButton
+                style="@style/ProtonButton.OutlinedButton"
+                android:id="@+id/set_msg_password_remove_button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/set_msg_password_apply_button"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="@dimen/padding_l"
+                android:text="@string/set_msg_password_remove_password"
+                android:textColor="?colorError"
+                android:enabled="false"/>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
