--- a/app/src/main/res/drawable/selector.xml
+++ b/app/src/main/res/drawable/selector.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
 Copyright (c) 2020 Proton Technologies AG
 
@@ -16,12 +17,9 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 -->
-
-<RadioButton xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/ProtonRadioButton.Mail"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/settings_margin_radio_button"
-    android:padding="@dimen/padding_l"
-    android:layoutDirection="rtl"
-    android:layout_gravity="start"/>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:color="@color/interaction_norm" android:state_checked="true" />
+    <item android:color="@color/shade_60" android:state_checked="false" />
+    <item android:color="@color/interaction_norm_pressed" android:state_selected="true" />
+    <item android:color="@color/shade_40" android:state_enabled="false" />
+</selector>
