--- a/app/src/main/res/layout/activity_contact_details.xml
+++ b/app/src/main/res/layout/activity_contact_details.xml
@@ -29,39 +29,53 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         android:id="@+id/appbar_contact_details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <include
-            android:id="@+id/include_toolbar"
-            layout="@layout/toolbar" />
-
-        <ch.protonmail.android.views.ListItemThumbnail
-            android:id="@+id/thumbnail_contact_details"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="@dimen/padding_l"
-            app:circleSize="@dimen/avatar_size" />
-
-        <ImageView
-            android:id="@+id/image_view_contact_details_thumbnail"
-            android:layout_width="@dimen/avatar_size"
-            android:layout_height="@dimen/avatar_size"
-            android:layout_gravity="center"
-            android:layout_margin="@dimen/padding_l"
-            android:contentDescription="@string/contact_details"
-            android:scaleType="fitXY"
-            android:visibility="gone" />
-
-        <TextView
-            android:id="@+id/text_view_contact_details_contact_name"
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/collapsing_toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center|bottom"
-            android:layout_marginBottom="@dimen/padding_l"
-            android:gravity="center"
-            android:textAppearance="@style/Proton.Text.Headline"
-            tools:text="@tools:sample/full_names" />
+            android:fitsSystemWindows="true"
+            app:collapsedTitleGravity="center"
+            app:contentScrim="@color/background_norm"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:titleEnabled="false"
+            app:toolbarId="@+id/toolbar">
+
+            <ch.protonmail.android.views.ListItemThumbnail
+                android:id="@+id/thumbnail_contact_details"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/padding_5xl"
+                android:layout_marginBottom="@dimen/padding_xxl"
+                app:circleSize="@dimen/avatar_size" />
+
+            <ImageView
+                android:id="@+id/image_view_contact_details_thumbnail"
+                android:layout_width="@dimen/avatar_size"
+                android:layout_height="@dimen/avatar_size"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/padding_5xl"
+                android:layout_marginBottom="@dimen/padding_xxl"
+                android:contentDescription="@string/contact_details"
+                android:scaleType="fitXY"
+                android:visibility="gone" />
+
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:minHeight="?attr/actionBarSize"
+                app:contentInsetStartWithNavigation="0dp"
+                app:layout_collapseMode="pin"
+                app:menu="@menu/menu_contact_details"
+                app:navigationIcon="@drawable/ic_arrow_left"
+                tools:title="Title" />
+
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -69,13 +83,24 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         android:id="@+id/scroll_view_contact_details"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/appbar"
+        android:layout_below="@id/appbar_contact_details"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/text_view_contact_details_contact_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|bottom"
+                android:layout_marginVertical="@dimen/padding_l"
+                android:gravity="center"
+                android:textAppearance="@style/Proton.Text.Headline"
+                app:layout_collapseMode="pin"
+                tools:text="@tools:sample/full_names" />
 
             <include
                 android:id="@+id/include_contact_details_buttons"
@@ -98,19 +123,5 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         android:layout_gravity="center"
         android:visibility="gone"
         tools:visibility="visible" />
-
-    <com.github.clans.fab.FloatingActionButton
-        android:id="@+id/fab_contact_details"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/fab_ic_contact_edit"
-        app:fab_colorNormal="@color/interaction_strong"
-        app:fab_colorPressed="@color/dark_purple_statusbar"
-        app:menu_colorRipple="@color/dark_purple_statusbar"
-        tools:ignore="VectorDrawableCompat" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
