--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -297,6 +297,13 @@
         <item name="android:textSize">@dimen/h6</item>
     </style>
 
+    <style name="MessageOpenInProtonCalendarText">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:letterSpacing">0.03</item>
+        <item name="android:textColor">@color/icon_purple</item>
+    </style>
+
     <style name="MessageDetailsTextBase">
         <item name="android:textSize">@dimen/h5</item>
     </style>
