--- a/app/src/main/res/layout/layout_message_details_header.xml
+++ b/app/src/main/res/layout/layout_message_details_header.xml
@@ -35,6 +35,17 @@
         app:layout_constraintRight_toLeftOf="@id/senderInitialBarrier"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/draftInitialView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_pencil"
+        android:layout_marginEnd="@dimen/sender_initial_view_margin_end"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/senderInitialBarrier"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone" />
+
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/senderInitialBarrier"
         android:layout_width="wrap_content"
