Show number of messages in a conversation above the subject
Showing it only when messages are more than 1

MAILAND-1770

--- a/app/src/main/res/layout/layout_message_details_activity_toolbar.xml
+++ b/app/src/main/res/layout/layout_message_details_activity_toolbar.xml
@@ -42,6 +42,22 @@
             android:layout_height="match_parent">
 
             <TextView
+                android:id="@+id/toolbarMessagesCountTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:textSize="@dimen/default_text_size_small"
+                android:gravity="center_horizontal"
+                android:textAppearance="@style/Proton.Text.DefaultSmall.Weak"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/starToggleButton"
+                app:layout_constraintBottom_toTopOf="@+id/collapsedToolbarTitleTextView"
+                android:visibility="gone"
+                tools:visibility="visible"
+                tools:text="1 Message" />
+
+            <TextView
                 android:id="@+id/collapsedToolbarTitleTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
