Force opening ICS attachments with Proton Calendar when clicking on CTA

--- a/app/src/main/res/layout/button_open_in_proton_calendar.xml
+++ b/app/src/main/res/layout/button_open_in_proton_calendar.xml
@@ -31,9 +31,9 @@
         style="@style/MessageOpenInProtonCalendarText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="13dp"
         android:background="@null"
         android:clickable="false"
+        android:paddingEnd="26dp"
         android:text="@string/button_open_in_proton_calendar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,13 +41,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
         android:clickable="false"
         app:layout_constraintBottom_toBottomOf="@+id/textView"
-        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintTop_toTopOf="@+id/textView"
         app:srcCompat="@drawable/ic_external_link"
         app:tint="@color/icon_purple" />
