Show attachments and starred icon on each message in a conversation
MAILAND-1770

--- a/app/src/main/res/layout/layout_message_details_header.xml
+++ b/app/src/main/res/layout/layout_message_details_header.xml
@@ -31,8 +31,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/sender_initial_view_margin_end"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/senderInitialBarrier"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/senderInitialBarrier"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
@@ -96,8 +96,8 @@
         android:id="@+id/senderNameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@id/forwardedImageView"
-        app:layout_constraintRight_toLeftOf="@id/lockIconTextView"
+        app:layout_constraintStart_toEndOf="@id/forwardedImageView"
+        app:layout_constraintEnd_toStartOf="@id/lockIconTextView"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintHorizontal_bias="0.0"
@@ -107,27 +107,37 @@
         style="@style/Proton.Text.Default"
         tools:text="@tools:sample/full_names" />
 
-    <!-- TODO: Should be replaced with a view with the v4 icons -->
     <TextView
         android:id="@+id/lockIconTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/message_details_header_margin_normal"
         android:layout_marginEnd="@dimen/message_details_header_margin_normal"
-        app:layout_constraintLeft_toRightOf="@id/senderNameTextView"
-        app:layout_constraintRight_toLeftOf="@+id/locationImageView"
+        app:layout_constraintStart_toEndOf="@id/senderNameTextView"
+        app:layout_constraintEnd_toStartOf="@id/messageDetailsIcons"
+        app:layout_constraintTop_toTopOf="@id/senderNameTextView"
         app:layout_constraintBottom_toBottomOf="@id/senderNameTextView"
         android:textSize="18sp"
         tools:text="@string/lock_default" />
+
+    <ch.protonmail.android.details.presentation.MessageDetailsHeaderIcons
+        android:id="@+id/messageDetailsIcons"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/message_details_header_margin_small"
+        android:layout_marginEnd="@dimen/message_details_header_margin_small"
+        app:layout_constraintEnd_toStartOf="@id/locationImageView"
+        app:layout_constraintTop_toTopOf="@id/senderNameTextView"
+        app:layout_constraintBottom_toBottomOf="@id/senderNameTextView" />
 
     <ImageView
         android:id="@+id/locationImageView"
         android:layout_width="@dimen/message_details_header_small_icon_size"
         android:layout_height="@dimen/message_details_header_small_icon_size"
         android:layout_marginEnd="@dimen/message_details_header_margin_normal"
-        app:layout_constraintRight_toLeftOf="@id/timeDateTextView"
-        app:layout_constraintTop_toTopOf="@id/timeDateTextView"
-        app:layout_constraintBottom_toBottomOf="@id/timeDateTextView"
+        app:layout_constraintEnd_toStartOf="@id/timeDateTextView"
+        app:layout_constraintTop_toTopOf="@id/senderNameTextView"
+        app:layout_constraintBottom_toBottomOf="@id/senderNameTextView"
         app:tint="@color/icon_weak"
         tools:src="@drawable/ic_inbox" />
 
@@ -135,7 +145,7 @@
         android:id="@+id/timeDateTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/senderNameTextView"
         app:layout_constraintBottom_toBottomOf="@id/senderNameTextView"
         style="@style/Proton.Text.Caption.Weak"
