--- a/app/src/main/res/layout/activity_account_type.xml
+++ b/app/src/main/res/layout/activity_account_type.xml
@@ -18,7 +18,6 @@ You should have received a copy of the GNU General Public License
 along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -31,51 +30,37 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingEnd="@dimen/view_padding"
-        android:paddingLeft="@dimen/view_padding"
-        android:paddingRight="@dimen/view_padding"
-        android:paddingStart="@dimen/view_padding">
+        android:paddingTop="@dimen/padding_xl"
+        android:paddingEnd="@dimen/padding_l"
+        android:paddingStart="@dimen/padding_l">
 
-        <ch.protonmail.android.views.CustomFontTextView
+        <TextView
             android:id="@+id/title"
+            style="@style/Proton.Text.DefaultSmall.Interaction"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/fields_default_space_medium"
-            android:layout_marginTop="@dimen/fields_default_space_medium"
-            android:text="@string/plan_and_user"
-            android:textColor="@color/switch_settings_item"
-            app:fontName="Roboto-Regular.ttf" />
+            android:text="@string/plan_and_user" />
 
         <RelativeLayout
             android:id="@+id/account_type_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clickable="false"
-            android:padding="@dimen/message_spacing">
+            android:padding="@dimen/padding_l">
 
-            <ch.protonmail.android.views.CustomFontButton
+            <Button
                 android:id="@+id/upgrade"
-                style="@style/SettingsButtonBlue"
+                style="@style/ProtonButton"
                 android:layout_width="wrap_content"
-                android:layout_height="44dp"
+                android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_margin="2dp"
-                android:paddingEnd="@dimen/fields_default_space"
-                android:paddingLeft="@dimen/fields_default_space"
-                android:paddingRight="@dimen/fields_default_space"
-                android:paddingStart="@dimen/fields_default_space"
                 android:text="@string/upgrade"
-                android:textAllCaps="true"
-                android:visibility="gone"
-                app:fontName="Roboto-Regular.ttf" />
+                android:visibility="gone" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_toLeftOf="@id/upgrade"
                 android:layout_toStartOf="@id/upgrade"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
@@ -86,68 +71,61 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
                     android:layout_height="20dp"
                     android:visibility="gone" />
 
-                <ch.protonmail.android.views.CustomFontTextView
+                <TextView
                     android:id="@+id/prefix"
+                    style="@style/Proton.Text.Default"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/fields_default_space_small"
-                    android:layout_marginRight="@dimen/fields_default_space_small"
-                    android:orientation="vertical"
-                    android:textSize="@dimen/h3"
-                    app:fontName="Roboto-Light.ttf" />
+                    android:layout_marginEnd="@dimen/padding_s"
+                    android:orientation="vertical" />
 
-                <ch.protonmail.android.views.CustomFontTextView
+                <TextView
                     android:id="@+id/account_type_title"
+                    style="@style/Proton.Text.Default.Bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:textSize="@dimen/h3"
-                    app:fontName="Roboto-Bold.ttf" />
+                    android:orientation="vertical" />
             </LinearLayout>
         </RelativeLayout>
 
-        <ch.protonmail.android.views.CustomFontTextView
+        <TextView
             android:id="@+id/title_payment_method"
+            style="@style/Proton.Text.DefaultSmall.Interaction"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/fields_default_space_medium"
-            android:layout_marginTop="@dimen/fields_default_space_large"
-            android:text="@string/payment_method"
-            android:textColor="@color/switch_settings_item"
-            app:fontName="Roboto-Regular.ttf" />
+            android:paddingBottom="@dimen/padding_l"
+            android:paddingTop="@dimen/padding_m"
+            android:text="@string/payment_method" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:padding="@dimen/message_spacing">
+            android:padding="@dimen/padding_m">
 
             <LinearLayout
                 android:id="@+id/payment_methods_parent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingBottom="@dimen/spacing">
+                android:paddingBottom="@dimen/padding_3xl">
 
-                <ch.protonmail.android.views.CustomFontTextView
+                <TextView
                     android:id="@+id/no_payment_methods"
+                    style="@style/Proton.Text.DefaultSmall.Weak"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/no_payment_methods"
-                    android:textColor="@color/iron_gray"
-                    android:textSize="@dimen/h5"
-                    android:visibility="gone"
-                    app:fontName="Roboto-Light.ttf" />
+                    android:visibility="gone" />
             </LinearLayout>
 
-            <ch.protonmail.android.views.CustomFontTextView
+            <TextView
                 android:id="@+id/edit_payment_methods"
+                style="@style/Proton.Text.Default"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/spacing"
                 android:text="@string/edit_payment_methods"
-                android:textSize="@dimen/h4"
-                app:fontName="Roboto-Light.ttf" />
+                />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
