--- a/app/src/main/res/layout/layout_message_details.xml
+++ b/app/src/main/res/layout/layout_message_details.xml
@@ -23,12 +23,23 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <View
+        android:id="@+id/messagesDividerView"
+        android:layout_width="0dp"
+        android:layout_height="4dp"
+        android:background="@drawable/list_divider"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="visible" />
+
+
     <ch.protonmail.android.views.messageDetails.MessageDetailsHeaderView
         android:id="@+id/headerView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/messagesDividerView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
