Integrated Human Verification.

--- a/app/src/main/res/drawable/shape_rectangle_small_corners_brand_fill.xml
+++ b/app/src/main/res/drawable/shape_rectangle_small_corners_brand_fill.xml
@@ -18,6 +18,6 @@
   -->
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/interaction_norm" />
+    <solid android:color="?attr/proton_interaction_norm" />
     <corners android:radius="@dimen/size_corner_s" />
 </shape>
