Change the appearance of the attachment view in message details to look like v4
MAILAND-1955

--- a/app/src/main/res/layout/layout_message_details.xml
+++ b/app/src/main/res/layout/layout_message_details.xml
@@ -43,8 +43,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/headerView" />
 
-    <!-- TODO: Replace with MessageDetailsAttachmentsView -->
-    <ch.protonmail.android.views.messageDetails.AttachmentsView
+    <ch.protonmail.android.views.messageDetails.MessageDetailsAttachmentsView
         android:id="@+id/attachmentsView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
