--- a/app/src/main/res/layout/layout_message_details_attachments.xml
+++ b/app/src/main/res/layout/layout_message_details_attachments.xml
@@ -23,17 +23,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/message_details_banner_height">
+    android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/attachmentsTextView"
+        android:id="@+id/attachments_text_view"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/message_details_banner_height"
         android:layout_marginStart="@dimen/message_details_banner_margin_horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/rightChevronImageView"
+        app:layout_constraintRight_toLeftOf="@id/chevron_image_view"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/attachments_list_linear_layout"
         android:textAppearance="@style/Proton.Text.DefaultSmall"
         app:drawableStartCompat="@drawable/ic_paper_clip"
         android:drawablePadding="@dimen/message_details_banner_drawable_padding"
@@ -41,14 +41,25 @@
         tools:text="1 Attachment (1.2 MB)" />
 
     <ImageView
-        android:id="@+id/rightChevronImageView"
+        android:id="@+id/chevron_image_view"
         android:layout_width="@dimen/message_details_banner_small_icon_size"
         android:layout_height="@dimen/message_details_banner_small_icon_size"
         android:layout_marginEnd="@dimen/message_details_banner_margin_horizontal"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:src="@drawable/ic_chevron_right"
+        app:layout_constraintBottom_toTopOf="@id/attachments_list_linear_layout"
+        android:src="@drawable/ic_chevron_down"
         app:tint="@color/icon_weak" />
+
+    <!-- TODO: Will be removed when the separate screen for attachments is created -->
+    <LinearLayout
+        android:id="@+id/attachments_list_linear_layout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="vertical"
+        android:visibility="gone" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
