--- a/app/src/main/res/drawable/keyboard_button_background.xml
+++ b/app/src/main/res/drawable/keyboard_button_background.xml
@@ -19,18 +19,5 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <corners
-        android:bottomLeftRadius="500dp"
-        android:bottomRightRadius="500dp"
-        android:topLeftRadius="500dp"
-        android:topRightRadius="500dp" />
-    <solid android:color="@color/dark_purple" />
-    <padding
-        android:bottom="0dp"
-        android:left="0dp"
-        android:right="0dp"
-        android:top="0dp" />
-    <stroke
-        android:width="1dp"
-        android:color="@color/white" />
+    <solid android:color="@color/background_secondary" />
 </shape>
