--- a/app/src/main/res/layout/activity_fragment_container.xml
+++ b/app/src/main/res/layout/activity_fragment_container.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
 Copyright (c) 2020 Proton Technologies AG
 
 This file is part of ProtonMail.
@@ -21,10 +20,15 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"/>
+
     <FrameLayout
         android:id="@+id/fragmentContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar"/>
 
     <RelativeLayout
         android:id="@+id/progress_container"
@@ -47,8 +51,8 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
             android:layout_centerHorizontal="true"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="@dimen/spacing"
-            android:paddingBottom="0dp"
             android:paddingLeft="0dp"
+            android:paddingBottom="0dp"
             android:src="@drawable/logo" />
     </RelativeLayout>
 
