--- a/app/src/main/res/layout/secure_edit_view.xml
+++ b/app/src/main/res/layout/secure_edit_view.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
 Copyright (c) 2020 Proton Technologies AG
 
 This file is part of ProtonMail.
@@ -17,89 +16,28 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 -->
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <LinearLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/dark_purple"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingEnd="@dimen/activity_horizontal_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingStart="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin_xsmall">
+        android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="35dp"
-            android:layout_gravity="center"
-            android:padding="0dp"
-            android:src="@drawable/logo" />
-
-        <ch.protonmail.android.views.CustomFontTextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/pin_input"
+            style="@style/ProtonInput.PIN"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="@dimen/fields_default_space"
             android:gravity="center_horizontal"
-            android:text="@string/enter_pin"
-            android:textColor="@color/field_hint_purple"
-            android:textSize="@dimen/h4"
-            app:fontName="Roboto-Regular.ttf" />
+            android:cursorVisible="false"
+            android:imeOptions="actionDone"
+            android:inputType="textPassword"
+            android:singleLine="true" />
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_gravity="bottom"
-            android:layout_marginTop="@dimen/fields_default_space_small"
-            android:gravity="bottom"
-            android:paddingEnd="@dimen/fields_default_space_medium"
-            android:paddingLeft="@dimen/fields_default_space_medium"
-            android:paddingRight="@dimen/fields_default_space_medium"
-            android:paddingStart="@dimen/fields_default_space_medium">
-
-            <ch.protonmail.android.views.CustomFontEditText
-                android:id="@+id/pin_input"
-                style="@style/V3EditText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:layout_alignParentBottom="true"
-                android:imeOptions="actionDone"
-                android:inputType="textPassword"
-                android:singleLine="true"
-                android:textSize="@dimen/h0"
-                android:cursorVisible="false"
-                android:textCursorDrawable="@drawable/cursor"
-                app:fontName="Roboto-Light.ttf" />
-
-            <ImageButton
-                android:id="@+id/button_delete"
-                android:layout_width="wrap_content"
-                android:layout_height="24dp"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginEnd="@dimen/fields_default_space_small"
-                android:layout_marginRight="@dimen/fields_default_space_small"
-                android:background="@android:color/transparent"
-                android:src="@drawable/ic_backspace_white" />
-        </RelativeLayout>
-
-        <ch.protonmail.android.views.CustomFontTextView
+        <TextView
             android:id="@+id/attempts"
-            android:layout_width="wrap_content"
+            style="@style/Proton.Text.Caption"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/padding_m"
             android:gravity="center_horizontal"
-            android:textColor="@color/red"
-            android:textSize="@dimen/h4"
-            android:padding="2dp"
-            android:layout_marginTop="5dp"
-            app:fontName="Roboto-Regular.ttf" />
+            android:textColor="@color/notification_error" />
     </LinearLayout>
-</merge>
