--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -46,6 +46,7 @@
     <dimen name="padding_3xl">40dp</dimen>
     <dimen name="padding_4xl">48dp</dimen>
     <dimen name="padding_5xl">56dp</dimen>
+    <dimen name="padding_6xl">64dp</dimen>
 
     <dimen name="elevation_s">2dp</dimen> // standard button low 2dp
     <dimen name="elevation_m">4dp</dimen> // standard app bar 4dp
@@ -131,7 +132,7 @@
     <dimen name="activity_vertical_margin_small">8dp</dimen>
     <dimen name="activity_vertical_margin_xsmall">4dp</dimen>
 
-    <dimen name="fields_default_space">10dp</dimen>
+    <dimen name="fields_default_space">8dp</dimen>
     <dimen name="fields_default_space_medium">16dp</dimen>
     <dimen name="fields_default_space_large">24dp</dimen>
     <dimen name="fields_default_space_xlarge">32dp</dimen>
